# KaspCpp

./: CMakeLists.txt  README.md
include/: Client.hpp  DataProcessingServer.hpp  DisplayServer.hpp  SocketWrapper.hpp
src/: Client.cpp  DataProcessingServer.cpp  DisplayServer.cpp  SocketWrapper.cpp  main_client.cpp  main_display.cpp  main_processing.cpp
tests/: test_processing.cpp
